FetchApp/application/static/carousel.css
:root{
    --font:courier;
}

body {
  overflow: hidden;
  font-family: var(--font);
  background: linear-gradient(135deg, #F7EEE2, #74a57f);
}

h1 {
  display: flex;
  justify-content: center;
  font-size: 50px;
  color: rgb(255, 255, 255);
  margin-top: 20px;
  padding-bottom: 0px;
  margin-bottom: 0px;
  font-weight: 600;
}

.carousel {
  z-index: 1;
  height: 100vh;
  overflow: hidden;
  pointer-events: none;
}

.carousel-item {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  --items: 2;
  --width: clamp(150px, 30vw, 400px);
  --height: clamp(300px, 40vw, 600px);
  --x: calc(var(--active) * 140%);
  --y: calc(var(--active) * 2%);
  --rot: calc(var(--active) * 50deg);
  /* --opacity: calc(var(--zIndex) / var(--items) * 3 - 2); */
  overflow: hidden;
  position: absolute;
  z-index: var(--zIndex);
  width: var(--width);
  height: var(--height);
  margin: calc(var(--height) * -0.5) 0 0 calc(var(--width) * -0.5);
  border-radius: 10px;
  top: 45%;
  left: 50%;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
  transform-origin: 0% 90%;
  background: #74A57F;
  pointer-events: all;
  transform: translate(var(--x), var(--y)) rotate(var(--rot));
  transition: transform 0.8s cubic-bezier(0, 0.02, 0, 1);
  border-style: solid;
  border-color: #fff;
  border-width: 10px;
}
.carousel-item .carousel-box {
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  transition: opacity 0.8s cubic-bezier(0, 0.02, 0, 1);
  opacity: var(--opacity);
}
.carousel-item .carousel-box:before {
  content: "";
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
 /* background: linear-gradient(
    to bottom,
    rgba(255, 255, 255, 0.3),
    rgba(255, 255, 255, 0) 80%,
    rgba(255, 255, 255, 0) 50%,
    rgba(255, 255, 255, 0.5)*/
  );
}
.carousel-item .title {
  position: absolute;
  z-index: 1;
  color: #ffffff;
  justify-content: center;
  bottom: 160px;
  left: 110px;
  transition: opacity 0.8s cubic-bezier(0, 0.02, 0, 1);
  font-size: clamp(30px, 3vw, 40px);
  font-weight: 500;
  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
}
.carousel-item .description {
  position: absolute;
  z-index: 1;
  color: #fff;
  bottom: 40px;
  left: 15px;
  transition: opacity 0.8s cubic-bezier(0, 0.02, 0, 1);
  font-size: 15px;
  overflow: auto;
}
.carousel-item img {
  width: 80%;
  height: 70%;
  position: relative;
  top: 20px;
  left: 35px;
  border-radius: 10px;
  border-style: solid;
  border-color: #fff;
  border-width: 5px;
}

.layout {
  position: absolute;
  z-index: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  pointer-events: none;
}
.layout:before {
  content: "";
  position: absolute;
  z-index: 1;
  top: 0;
  left: 90px;
  width: 10px;
  height: 100%;
  border: 1px solid #fff;
  border-top: none;
  border-bottom: none;
  opacity: 0.15;
}
.layout .box {
  position: absolute;
  bottom: 0;
  left: 30px;
  color: #fff;
  transform-origin: 0% 10%;
  transform: rotate(-90deg);
  font-size: 9px;
  line-height: 1.4;
  text-transform: uppercase;
  opacity: 0.4;
}

.cursor {
  position: fixed;
  z-index: 10;
  top: 0;
  left: 0;
  --size: 40px;
  width: var(--size);
  height: var(--size);
  border-radius: 50%;
  border: 1px solid rgba(255, 255, 255, 0.2);
  margin: calc(var(--size) * -0.5) 0 0 calc(var(--size) * -0.5);
  transition: transform 0.85s cubic-bezier(0, 0.02, 0, 1);
  display: none;
  pointer-events: none;
}

#sitterGrid {
display: grid;
grid-template-columns: auto auto auto;
padding-top: 5%;
}

#sitterResults {
grid-column: 2 / 2;
grid-row: 2 / 2;
font-size: 20px;
padding-left:200px;
border-radius: 50px;
}

.userTableColumn {
padding:10px;
color:black;
border-bottom: 5px solid #74A57F;
}

td {
color:black;
border-bottom: 5px solid #74A57F;
}


@media (pointer: fine) {
  .cursor {
    display: block;
  }
}
.cursor2 {
  --size: 2px;
  transition-duration: 0.7s;
}

